delte service first

--- a/ansible-play.yml
+++ b/ansible-play.yml
@@ -2,6 +2,8 @@
   remote_user: ubuntu
   tasks:
   -  name: delete old deployment
+     ansible.builtin.command: kubectl delete -f /home/ubuntu/service.yml
+  -  name: delete old deployment
      ansible.builtin.command: kubectl delete -f /home/ubuntu/deployment.yml
   -  name: apply deployment
      ansible.builtin.command: kubectl apply -f /home/ubuntu/deployment.yml
